# Sol-Plex-Problems

./: .dockerignore  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  Dockerfile  README.md  ROADMAP.md  package.json  requirements.txt
.github/ISSUE_TEMPLATE/: discovery-intake.yml
.github/workflows/: ci.yml  docker-publish.yml  main.yml  markdownlint.yml  publish.yml  release.yml
cognitive/: math-engine.py  memory-manager.py  search-agent.py  solution-vault.md
cognitive/quantum/: qbit-error-correction.md
cognitive/security/: homomorphic-encryption.md  quantum-key-distribution.md  zero-trust-mesh.md
cognitive/super-quantum/: decoherence-mitigation.md
cognitive/supercomputing/: hpc-optimization.md
deploy/: main.tf  variables.tf
discovery-engine/: parser.py  root-cause-5whys.md
docs/: ARCHITECTURE.md  CONTRIBUTING_GUIDELINES.md  LICENSE_INFO.md  SECURITY.md⁠  SYSTEM_PROMPTS.md  style-guide.md
frameworks/systems/: feedback-loops.md
impact-engine/: standardization-template.md⁠
scripts/: deploy-helper.sh  generate-report.py  setup-env.sh
src/: __init__.py  lib.rs
templates/: analytical-worksheet.md  decision-matrix.md  design-canvas.md  meeting-agenda-template.md  project-tracker.md  retrospective-form.md  risk-assessment.md  stakeholder-map.md  status-report-template.md  systems-map-template.md
workflows/: 48-hour-pivot.md  OODA-loops.md  decision-audit-trail.md  feedback-loop-integration.md  onboarding-guide.md  pre-mortem-sprint.md  problem-lifecycle.md  system-stress-test.md  user-journey-mapping.md
(+12 files in other folders)
